@@ -23,6 +23,8 @@ Version 4.5.2 'dan Eider':
 		* fix compilation on macOS Big Sur
 	- merge PR #546 (by jelmd)
 		* Add ACME redirect url
+	- merge PR #551 (by jelmd)
+		* support of --acme-redirect <URL>
 
 24/06/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
 Version 4.5.1.3 'dan Eider':
